--- a/app/src/main/res/layout/activity_timer_overlay_service.xml
+++ b/app/src/main/res/layout/activity_timer_overlay_service.xml
@@ -1,29 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:padding="24dp"
-    android:background="#AA000000"
-    android:gravity="center"
-    tools:context=".TimerOverlayService">
+    android:padding="10dp"
+    android:background="@android:color/holo_blue_light"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/timerText"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="Sisa waktu"
-        android:textColor="#FFFFFF"
+        android:text="Timer: 60"
         android:textSize="16sp"
-        android:padding="4dp"/>
+        android:textColor="@android:color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <Button
-        android:id="@+id/btnStop"
+        android:id="@+id/stopButton"
         android:text="Stop"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"/>
-
+        android:layout_height="wrap_content"/>
 </LinearLayout>
