--- a/app/src/main/res/layout/activity_timer_overlay_service.xml
+++ b/app/src/main/res/layout/activity_timer_overlay_service.xml
@@ -3,9 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:padding="10dp"
-    android:background="@android:color/holo_blue_light"
+    android:background="@android:color/holo_red_dark"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="120dp">
+
 
     <TextView
         android:id="@+id/timerText"
@@ -18,6 +19,7 @@
     <Button
         android:id="@+id/stopButton"
         android:text="Stop"
+        android:padding="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </LinearLayout>
